# puzzle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
docs/: conf.py  index.rst
examples/: CMakeLists.txt
resources/: assembler.json  buildings.json  constructor.json  foundry.json  manufacturer.json  miner.json  oil_extractor.json  refinery.json  smelter.json  water_extractor.json
saves/: reinforced_plate.json  starting_oil.json
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  node-editor.h
src/application/: CMakeLists.txt  application.cpp  application.h  imgui_impl.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  logger.cpp  logger.h  sys.cpp  sys.h  uniform_buffer.h  utils.h  vertex.h
src/editor/: brush.h  forest.cpp  forest.h  link.cpp  link.h  node-editor.cpp  node-editor.h  node.cpp  node.h  pin.cpp  pin.h  simulation.h  utils.cpp  utils.h
src/factory/: container.cpp  link.cpp  node.cpp  relay.cpp  simulation.cpp  simulation.h
tests/: CMakeLists.txt  forest_test.h  puzzle_test.cpp
