#
#   If people don't build test don't add gtest
#
IF(BUILD_TESTING)
    ADD_SUBDIRECTORY(gtest)
ENDIF(BUILD_TESTING)

IF (BUILD_BENCHMARK)
    ADD_SUBDIRECTORY(hayai)
    INCLUDE_DIRECTORIES(hayai/src)
ENDIF(BUILD_BENCHMARK)

ADD_SUBDIRECTORY(spdlog EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(sdl2 EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(glm EXCLUDE_FROM_ALL)
ADD_SUBDIRECTORY(json EXCLUDE_FROM_ALL)

# To display source in IDE
file(GLOB_RECURSE IMGUI_SRC imgui/*.cpp imgui/*.h)
ADD_CUSTOM_TARGET(ImGUIsrc ALL SOURCES ${IMGUI_SRC})
